ha_ndbcluster_cond.h, ha_ndbcluster_cond.cc:   bug#35185  SELECT LIKE gives wrong results when ndbcluster engine is used: Post-review fixes item.h, mysql_com.h:   Adding max values for enums to support allocating bitmasks of correct size